--- a/src/functionBased/App.css
+++ b/src/functionBased/App.css
@@ -64,12 +64,14 @@ body {
   border: none;
 }
 
+.inactive-link {
+  text-decoration: none;
+}
+
 .active-link {
   color: orangered;
   text-decoration: underline;
 }
-
-/* sidebar Nav */
 
 .navBar {
   position: relative;
@@ -96,7 +98,7 @@ body {
   height: 100vh;
   width: 0;
   overflow: hidden;
-  max-width: 290px;
+  max-width: 200px;
   z-index: 9;
 }
 
@@ -115,4 +117,50 @@ a {
 
 .menuNav li:first-child {
   margin-top: 7rem;
+}
+
+.about__content {
+  padding: 8rem 40px;
+  display: flex;
+}
+
+.about__list {
+  list-style: none;
+  flex: 2;
+  margin-right: 15px;
+}
+
+.about__list a {
+  color: #9f9f9f;
+  text-transform: capitalize;
+  padding: 20px 0;
+  font-weight: 600;
+}
+
+.about__list a:hover {
+  color: #000;
+}
+
+.main__content {
+  flex: 7;
+}
+
+.main__content h1 {
+  margin-bottom: 15px;
+  line-height: 30px;
+  font-size: 30px;
+}
+
+.main__content p {
+  line-height: 25px;
+}
+
+.header-title {
+  font-size: 6rem;
+  font-weight: 600;
+  margin-bottom: 2rem;
+  line-height: 1em;
+  color: #ececec;
+  text-transform: lowercase;
+  text-align: center;
 }
